changed man png to fix button overlap

--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@
     right: 650px; 
     position: absolute;
     transform: translateY(-50%); 
+    z-index: 5; 
 
 }
 
@@ -35,6 +36,7 @@
     position: absolute;
     transform: translateY(-50%); 
     color: #fff; 
+    z-index: 1; 
 }
 
 .content h1{
